<resources>
    <string name="app_name">Sign-In Quickstart</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="signed_in_err_orhs">"Not an Oak Ridge Account. Please Try Again."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <string name="title">About Interact</string>
    <string name="description">Interact is a service club for young people in Oak Ridge who want to join together to tackle the issues in their community that they care most about. Through Interact, you can carry out hands-on service projects, make new connections, develop leadership skills, and have fun!</string>
    <string name="design">This app was designed by Vasanth Sadhasivan as a member of the Oak Ridge Web and App Development Club in 2015.</string>
    <string name="links">This is an open sourced project, and all of the source code can be found on Github. Make sure to check out WAD Club and its other projects or contribute yourself here:</string>
    <string name="get_started_here">Get Started Here</string>
    <string name="join">Join</string>
    <string name="behind_the_scenes">Behind the Scenes</string>
    <string name="github">Github</string>
    <string name="resources">Resources</string>
    <string name="developers">Developers:</string>
    <string name="developers_names">Vasanth Sadhasivan\nNaveen Gopalan\nBernard Zhao\nDustin Nguyen\nORHS WAD Club\n</string>
    <string name="special_thanks">Special Thanks to:</string>
    <string name="negro900">Stephanie Allen\nShri Shankar\n</string>
    <string name="randeep">Randeep \'The Beast from the East\' Chana</string>
    <string name="website">Website</string>

    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id"> 1037409326708-fpfpgqevrtom8jk7bv1pju59scf4hipv.apps.googleusercontent.com </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
