<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background2"
    android:weightSum="4">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:fillViewport="false"
        android:layout_width="match_parent"
        android:background="@color/background2"
        android:layout_height="fill_parent">
        <LinearLayout
            android:background="@color/background2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:textSize="35sp"
                android:textColor="@color/text"
                android:id="@+id/header" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:textSize="15sp"
                android:textColor="@color/text"
                android:id="@+id/description" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/aboutinteract"
                android:src="@mipmap/aboutinteract"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_started_here"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:textSize="25sp"
                android:textColor="@color/text"
                android:id="@+id/getstarted" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:weightSum="2">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/join"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:id="@+id/joinbutton"
                    android:textColor="@color/text"
                    android:background="@drawable/alternativebuttons"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/website"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="40dp"
                    android:gravity="center"
                    android:id="@+id/websitebutton"
                    android:textColor="@color/text"
                    android:background="@drawable/alternativebuttons" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/behind_the_scenes"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textSize="35sp"
                android:textColor="@color/text"
                android:id="@+id/header2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/design"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:textSize="15sp"
                android:textColor="@color/text"
                android:id="@+id/description2" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/aboutWAAD"
                android:src="@mipmap/aboutwaad1"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/links"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:textSize="15sp"
                android:textColor="@color/text"
                android:id="@+id/links" />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:weightSum="2">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/github"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:id="@+id/githubbutton"
                    android:textColor="@color/text"
                    android:background="@drawable/alternativebuttons" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/resources"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="40dp"
                    android:gravity="center"
                    android:id="@+id/rescourcesbutton"
                    android:textColor="@color/text"
                    android:background="@drawable/alternativebuttons" />

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developers"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:textSize="25sp"
                android:textColor="@color/text"
                android:id="@+id/developers" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developers_names"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:textSize="20sp"
                android:textColor="@color/text"
                android:id="@+id/devdescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/special_thanks"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:textSize="25sp"
                android:textColor="@color/text"
                android:id="@+id/thanks" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/negro900"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:textSize="20sp"
                android:textColor="@color/text"
                android:id="@+id/description3" />
            <TextView
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:textSize="6sp"
                android:text="@string/randeep" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>